objects/TW1_Simulacao_AF__c.object
<CustomObject>
    <fields>
        <fullName>Data_Atualizacao_Saldo_Devedor__c</fullName>
        <label>Data Atualização</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SERASA__c</fullName>
        <label>SERASA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Com Restrições</fullName>
                </value>
                <value>
                    <fullName>Sem Restrições</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Analise_Comprometimento_Renda__c</fullName>
        <formula>IF(
		ISBLANK(TEXT(TW1_Tipo_Renda_Mensal__c)),
		&quot;Sem tipo de renda preenchido&quot;,
		IF(
				OR(
					AND( 
							TEXT(TW1_Tipo_Renda_Mensal__c) = &quot;Líquida&quot; , 
							TW1_Comprometimento_de_Renda__c &lt; 0.3
						),
						
					AND(
							TEXT(TW1_Tipo_Renda_Mensal__c) = &quot;Bruta&quot;, 
							TW1_Comprometimento_de_Renda__c &lt; 0.25)
				  )
			,
		&quot;Baixo Risco&quot;,
		&quot;Alto Risco&quot;
		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Análise Comprometimento de Renda</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Anelise_Credito__c</fullName>
        <label>Análise de Crédito</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Ato__c</fullName>
        <label>Ato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Bloco__c</fullName>
        <formula>TW1_Caso__r.TW1_Unidade__r.TW1_Bloco__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bloco</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Boleto__c</fullName>
        <label>Boleto (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Capitalizacao_Anual__c</fullName>
        <formula>( MONTH(  TW1_Vencimento_1_Parcela_Anual__c  ) + (YEAR (  TW1_Vencimento_1_Parcela_Anual__c  )*12)) - 
(MONTH (TW1_Data_Fiduciaria__c ) + (YEAR (TW1_Data_Fiduciaria__c )*12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capitalização Anual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Capitalizacao_Semestral__c</fullName>
        <formula>( MONTH( TW1_Vencimento_1_Parcela_Semestral__c ) + (YEAR ( TW1_Vencimento_1_Parcela_Semestral__c )*12)) - 
(MONTH (TW1_Data_Fiduciaria__c ) + (YEAR (TW1_Data_Fiduciaria__c )*12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capitalização Semestral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Caso__c</fullName>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Simulações de Alienação Fiduciária</relationshipLabel>
        <relationshipName>Simulacoes_Alienacao_Fiduciaria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Certidoes_Custas_Compradores__c</fullName>
        <label>Certidões / Custas Compradores</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Certidoes_Custas_Imovel__c</fullName>
        <label>Certidões / Custas Imóvel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Comentario_para_Aprovacao__c</fullName>
        <label>Comentário para Aprovação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Comprometimento_Anual__c</fullName>
        <formula>IF( (TW1_Valor_Parcela_Anual_com_Juros__c / 12 &gt;0), (TW1_Valor_Parcela_Anual_com_Juros__c / 12), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comprometimento Anual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Comprometimento_Mensal_Total__c</fullName>
        <formula>TW1_Comprometimento_Mensal__c +  TW1_Outras_Parcelas_Correspondente_Men__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comprometimento Mensal Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Comprometimento_Mensal__c</fullName>
        <formula>TW1_Valor_Parcela_Mensal_com_Juros__c + TW1_Comprometimento_Semestral__c +

(TW1_Valor_Parcela_Anual_com_Juros__c / 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comprometimento Mensal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Comprometimento_Semestral__c</fullName>
        <formula>TW1_Valor_Parcela_Semestral_com_Juros__c / 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comprometimento Semestral</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Comprometimento_de_Renda__c</fullName>
        <formula>TW1_Comprometimento_Mensal_Total__c /  TW1_Renda_Media_Mensal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comprometimento de Renda</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Conferencia_Valores__c</fullName>
        <formula>IF( ((TW1_Ato__c + TW1_Parcelas_Mensais__c + TW1_Parcelas_Anuais__c + TW1_Parcela_Unica__c + TW1_Parcela_Unica_B__c + TW1_Outras_Parcelas__c+ TW1_Parcelas_Semestrais__c )= TW1_Valor_Fiduciaria__c ), 
0, TW1_Valor_Fiduciaria__c - (TW1_Ato__c + TW1_Parcelas_Mensais__c + TW1_Parcelas_Anuais__c + TW1_Parcela_Unica__c + TW1_Parcela_Unica_B__c + TW1_Outras_Parcelas__c+TW1_Parcelas_Semestrais__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conferência de Valores</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Criterio_Limite_Idade__c</fullName>
        <defaultValue>&quot;Idade máxima 69,9 anos&quot;</defaultValue>
        <label>Critério para Limite de Idade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Criterio_Prazo_Financiamento__c</fullName>
        <defaultValue>&quot;Idade + Prazo de Financiamento &lt; 73 anos&quot;</defaultValue>
        <label>Critério para Prazo de Financiamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Criterio_Saldo_Devedor__c</fullName>
        <defaultValue>&quot;Limite máximo por CPF é R$ 3.000.000,00&quot;</defaultValue>
        <label>Critério para Saldo Devedor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Custas__c</fullName>
        <label>Custas (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Ato__c</fullName>
        <label>Data do Ato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Base_Inicio__c</fullName>
        <formula>DATE(YEAR(TW1_Data_Base__c),MONTH(TW1_Data_Base__c),01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Base Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Base__c</fullName>
        <label>Data Base Assinatura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Fiduciaria__c</fullName>
        <formula>TW1_Data_Base__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Fiduciária</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Habite_se__c</fullName>
        <formula>TW1_Caso__r.TW1_Unidade__r.TW1_Data_Habite_se__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data do Habite-se</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Parcela_Mensal_Inicio__c</fullName>
        <formula>DATE(YEAR( TW1_Vencimento_Parcela_Mensal__c ),MONTH( TW1_Vencimento_Parcela_Mensal__c ),01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Parcela Mensal Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Venda__c</fullName>
        <formula>TW1_Caso__r.TW1_Unidade__r.TW1_Data_da_Venda__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data da Venda</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Desconto_Acrescimo__c</fullName>
        <formula>TW1_Saldo_Fiduciaria__c -  TW1_Saldo_Devedor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desconto/Acréscimo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao_Serasa__c</fullName>
        <label>Descrição SERASA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Despachante__c</fullName>
        <label>Despachante</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Empreendimento__c</fullName>
        <formula>TW1_Caso__r.TW1_Empreendimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empreendimento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Encargos__c</fullName>
        <label>Encargos (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Enviar_para_Aprovacao__c</fullName>
        <label>Enviar para Aprovação</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Fator_de_Juros__c</fullName>
        <formula>(( TW1_Taxa_de_Juros_Anual_1_2__c  + 1))^(IF ( ( TW1_Data_da_Venda__c &gt;  TW1_Data_Habite_se__c ),

(ABS((YEAR( TW1_Data_da_Venda__c) * 12 + MONTH (TW1_Data_da_Venda__c)) - (YEAR(  TW1_Data_Fiduciaria__c  ) * 12 + MONTH (TW1_Data_Fiduciaria__c)))),

(ABS((YEAR(  TW1_Data_Habite_se__c ) * 12 + MONTH (TW1_Data_Habite_se__c)) - (YEAR(  TW1_Data_Fiduciaria__c  ) * 12 + MONTH (TW1_Data_Fiduciaria__c))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fator de Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_IGPM_Atual_Nao_Encontrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGPM Atual Não Encontrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_IGPM_Base_nao_encontrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGPM Base não encontrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_IGP_M_Atual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IGP-M Atual</label>
        <referenceTo>TW1_IGP_M__c</referenceTo>
        <relationshipLabel>Simulações de Alienação Fiduciária (IGP-M Atual)</relationshipLabel>
        <relationshipName>AF_IGPM_Atual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_IGP_M_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IGP-M Base</label>
        <referenceTo>TW1_IGP_M__c</referenceTo>
        <relationshipLabel>Simulações de Alienação Fiduciária</relationshipLabel>
        <relationshipName>AF_IGPM_Base</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_INCC_Base_Nao_Encontrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCC Base Não Encontrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_INCC_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INCC Base</label>
        <referenceTo>TW1_INCC__c</referenceTo>
        <relationshipLabel>Simulações de Alienação Fiduciária</relationshipLabel>
        <relationshipName>AF_INCC_BASE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_INCC_Habite_se__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INCC Habite-se</label>
        <referenceTo>TW1_INCC__c</referenceTo>
        <relationshipLabel>Simulações de Alienação Fiduciária (INCC Habite-se)</relationshipLabel>
        <relationshipName>AF_INCC_Habite_Se</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_INCC_Habitese_Nao_Encontrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INCC Habite-se Não Encontrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_ITBI_Simulacao__c</fullName>
        <label>ITBI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_ITBI__c</fullName>
        <label>ITBI (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Id_Unidade__c</fullName>
        <formula>TW1_Caso__r.TW1_Unidade__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Unidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Idade_Maxima__c</fullName>
        <formula>CASE(
		(IF( (TW1_Caso__r.TW1_Maior_Idade__c &lt; 70),&quot;Ok&quot;,&quot;Acima do Limite&quot;)) ,
		&quot;Ok&quot;,IMAGE(&quot;servlet/servlet.ImageServer?id=0150v00000076CK&amp;oid=00D0v000000CmTj&amp;lastMod=1516821347000&quot;,&quot;Apto&quot;),
		&quot;Acima do Limite&quot;,IMAGE(&quot;servlet/servlet.ImageServer?id=0150v000000766R&amp;oid=00D0v000000CmTj&amp;lastMod=1516821347000&quot;, &quot;Acima do Limite&quot;),
		IMAGE(&quot;servlet/servlet.ImageServer?id=0150v00000076CK&amp;oid=00D0v000000CmTj&amp;lastMod=1516821347000&quot;,&quot;Apto&quot;)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Idade Máxima</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Juros_Anuais_Efetivo__c</fullName>
        <label>Juros Anuais Efetivo</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Juros_Semestrais_Efetivo__c</fullName>
        <label>Juros Semestrais Efetivo</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_LTV_Atualizado__c</fullName>
        <formula>( TW1_Valor_Fiduciaria__c -  TW1_Ato__c ) /   TW1_Valor_de_Venda_Atualizado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTV Atualizado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_LTV__c</fullName>
        <formula>( TW1_Valor_Fiduciaria__c -  TW1_Ato__c ) /  TW1_Valor_da_Venda_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Limite_Saldo_Devedor__c</fullName>
        <formula>IF( (( TW1_Saldo_Fiduciaria__c -  TW1_Ato__c) &lt; $Setup.TW1_Padroes_Financeiros_Calcada__c.TW1_Saldo_Devedor_Maximo__c ), &quot;Ok&quot;, &quot;Acima do Limite &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limite Saldo Devedor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Mes_Habite_se__c</fullName>
        <formula>TEXT(MONTH(TW1_Caso__r.TW1_Unidade__r.TW1_Data_Habite_se__c )) + &quot;/&quot; + 
TEXT(YEAR(TW1_Caso__r.TW1_Unidade__r.TW1_Data_Habite_se__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês Habite-se</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Mes_Inicio_Correcao_Monetaria__c</fullName>
        <formula>TEXT(MONTH( TW1_Data_Fiduciaria__c )) + &quot;/&quot; + 
TEXT(YEAR(TW1_Data_Fiduciaria__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês Início Correção Monetária</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Mes_Inicio_Juros__c</fullName>
        <formula>TEXT(MONTH( TW1_Data_Fiduciaria__c )) + &quot;/&quot; + 
TEXT(YEAR(TW1_Data_Fiduciaria__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês Início Juros</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Meses_Capitalizacao__c</fullName>
        <formula>( MONTH( TW1_Vencimento_Parcela_Mensal__c ) + (YEAR ( TW1_Vencimento_Parcela_Mensal__c )*12)) -
(MONTH (TW1_Data_Fiduciaria__c ) + (YEAR (TW1_Data_Fiduciaria__c )*12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meses de Capitalização</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Observacao_Desc_Acres__c</fullName>
        <label>Observação Desc/Acres</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Observacao_das_Parcelas__c</fullName>
        <label>Observação das Parcelas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Opcao_Modif__c</fullName>
        <label>Opção/Modificação (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Outras_Parcelas_Correspondente_Men__c</fullName>
        <label>Outras Parcelas - Correspondente Mensal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Outras_Parcelas__c</fullName>
        <label>Outras Parcelas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcela_Unica_B__c</fullName>
        <label>Total Parcelas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcela_Unica_B_capitalizada__c</fullName>
        <formula>TW1_Parcela_Unica_B__c * ((1 +  TW1_Taxa_Juros_Efetiva_Unica_B__c  )^ (( MONTH( TW1_Vencimento_Parcela_Unica_B__c ) + (YEAR ( TW1_Vencimento_Parcela_Unica_B__c )*12)) - 
(MONTH (TW1_Data_Fiduciaria__c ) + (YEAR (TW1_Data_Fiduciaria__c )*12))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela Única B com Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcela_Unica_Capitalizada__c</fullName>
        <formula>TW1_Parcela_Unica__c * ((1 + TW1_Taxa_de_Juros_Parcela_Unica__c )^ (( MONTH( TW1_Vencimento_Parcela_Unica__c ) + (YEAR ( TW1_Vencimento_Parcela_Unica__c )*12)) -
(MONTH (TW1_Data_Fiduciaria__c ) + (YEAR (TW1_Data_Fiduciaria__c )*12))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela Única com Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcela_Unica__c</fullName>
        <label>Total Parcelas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcelas_Anuais_Capitalizadas__c</fullName>
        <formula>TW1_Parcelas_Anuais__c * ((1 +  TW1_Taxa_de_Juros_Anual_1_2__c  )^  TW1_Capitalizacao_Anual__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcelas Anuais Capitalizadas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcelas_Anuais__c</fullName>
        <label>Total Parcelas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcelas_Mensais_Capitalizadas__c</fullName>
        <formula>TW1_Parcelas_Mensais__c * ((1 + TW1_Taxa_de_Juros_Efetiva__c )^  TW1_Meses_Capitalizacao__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcelas Mensais Capitalizadas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcelas_Mensais__c</fullName>
        <label>Total Parcelas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcelas_Semestrais_Capitalizadas__c</fullName>
        <formula>TW1_Parcelas_Semestrais__c * ((1 +  TW1_Taxa_de_Juros_Semestrais_1_2__c  )^ TW1_Capitalizacao_Semestral__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcelas Semestrais Capitalizadas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Parcelas_Semestrais__c</fullName>
        <label>Total Parcelas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Patrimonio__c</fullName>
        <label>Patrimônio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Prazo_Financiamento__c</fullName>
        <formula>CASE(
		IF((((((TW1_Qtd_Parcelas_Mensais__c)/12)+TW1_Caso__r.TW1_Maior_Idade__c))&lt;=73),&quot;Ok&quot;,&quot;Acima do Limite&quot;) ,
		&quot;Ok&quot;,IMAGE(&quot;servlet/servlet.ImageServer?id=0150v00000076CK&amp;oid=00D0v000000CmTj&amp;lastMod=1516821347000&quot;,&quot;Apto&quot;),
		&quot;Acima do Limite&quot;,IMAGE(&quot;servlet/servlet.ImageServer?id=0150v000000766R&amp;oid=00D0v000000CmTj&amp;lastMod=1516821347000&quot;, &quot;Acima do Limite&quot;),
		IMAGE(&quot;servlet/servlet.ImageServer?id=0150v00000076CK&amp;oid=00D0v000000CmTj&amp;lastMod=1516821347000&quot;,&quot;Apto&quot;)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prazo Financiamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Proprietario__c</fullName>
        <formula>TW1_Caso__r.Contact.FirstName + &quot; &quot;+  TW1_Caso__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proprietário</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Qtd_Outras_Parcelas__c</fullName>
        <label>Qtd Outras Parcelas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Qtd_Parcelas_Anuais__c</fullName>
        <label>Qtd Parcelas Anuais</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Qtd_Parcelas_Mensais__c</fullName>
        <label>Qtd Parcelas Mensais</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Qtd_Parcelas_Semestrais__c</fullName>
        <label>Qtd Parcelas Semestrais</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Rateio__c</fullName>
        <label>Rateio (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Registro__c</fullName>
        <label>Registro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Renda_Media_Mensal__c</fullName>
        <label>Renda Média Mensal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo_Devedor_UAU__c</fullName>
        <formula>TW1_Caso__r.TW1_Unidade__r.TW1_Saldo_Devedor_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo Devedor UAU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo_Devedor__c</fullName>
        <label>Saldo Devedor Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo_Fiduciaria__c</fullName>
        <label>Saldo Fiduciária</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Seguro_Prestamista__c</fullName>
        <label>Seguro Prestamista (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Seguro__c</fullName>
        <label>Seguro (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Selecionada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selecionada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Servico_Complementar__c</fullName>
        <label>Serviço Complementar (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Situacao_Simulacao_AF__c</fullName>
        <label>Situação da Simulação da AF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Em elaboração</fullName>
                    <default>true</default>
                    <label>Em elaboração</label>
                </value>
                <value>
                    <fullName>Aprovada pela Diretoria</fullName>
                </value>
                <value>
                    <fullName>Aprovada pela Gerência</fullName>
                </value>
                <value>
                    <fullName>Reprovada pela Diretoria</fullName>
                </value>
                <value>
                    <fullName>Reprovada pela Gerência</fullName>
                </value>
                <value>
                    <fullName>Em Aprovação da Diretoria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status_da_Conferencia__c</fullName>
        <formula>IF(TW1_Conferencia_Valores__c &lt;&gt; 0, IMAGE(&quot;servlet/servlet.ImageServer?id=0150v000000Eq7v&amp;oid=00D0v000000CmTj&amp;lastMod=1521150023000&quot;, &quot;Total saldo da fiduciária diferente do total das parcelas&quot;),IMAGE(&quot;servlet/servlet.ImageServer?id=0150v00000076CK&amp;oid=00D0v000000CmTj&amp;lastMod=1516821347000&quot;,&quot;Ok&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status da Conferência</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Taxa_Juros_Efetiva_Unica_B__c</fullName>
        <label>Taxa de Juros Efetiva ao mês</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Taxa_de_Juros_Anual_1_2__c</fullName>
        <formula>(EXP((1/12)*LN((1 + TW1_Taxa_de_Juros_Efetiva_Anuais__c))) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxa de Juros Anual 1/2</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Taxa_de_Juros_Efetiva_Anuais__c</fullName>
        <label>Taxa de Juros Efetiva Anuais</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Taxa_de_Juros_Efetiva_Semestral__c</fullName>
        <label>Taxa de Juros Efetiva Semestral</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Taxa_de_Juros_Efetiva__c</fullName>
        <label>Taxa de Juros Efetiva ao mês</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Taxa_de_Juros_Parcela_Unica__c</fullName>
        <label>Taxa de Juros Efetiva ao mês</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Taxa_de_Juros_Semestrais_1_2__c</fullName>
        <formula>(EXP((1/6)*LN((1 +  TW1_Taxa_de_Juros_Efetiva_Semestral__c ))) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxa de Juros Semestrais 1/2</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo_Renda_Mensal__c</fullName>
        <label>Tipo de Renda Mensal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bruta</fullName>
                </value>
                <value>
                    <fullName>Líquida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Total_Pagar_Custas__c</fullName>
        <formula>TW1_ITBI_Simulacao__c +  TW1_Certidoes_Custas_Compradores__c +  TW1_Certidoes_Custas_Imovel__c +  TW1_Despachante__c +  TW1_Registro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total a Pagar (Custas)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <formula>TW1_Caso__r.TW1_Unidade__r.TW1_Unidade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Fiduciaria__c</fullName>
        <formula>TW1_Saldo_Fiduciaria__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Fiduciária</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Pago_Preco__c</fullName>
        <formula>TW1_Valor_Total_Pago__c - TW1_Custas__c - TW1_Seguro_Prestamista__c - TW1_Seguro__c - TW1_Servico_Complementar__c - TW1_Rateio__c - TW1_Boleto__c - TW1_Opcao_Modif__c - TW1_ITBI__c - TW1_Encargos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Pago Preço</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Parcela_Anual_com_Juros__c</fullName>
        <formula>TW1_Parcelas_Anuais_Capitalizadas__c * ((TW1_Taxa_de_Juros_Efetiva_Anuais__c * ((1 + TW1_Taxa_de_Juros_Efetiva_Anuais__c) ^ (TW1_Qtd_Parcelas_Anuais__c -1))) / ((1 + TW1_Taxa_de_Juros_Efetiva_Anuais__c) ^ TW1_Qtd_Parcelas_Anuais__c -1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Parcela Anual com Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Parcela_Mensal_com_Juros__c</fullName>
        <formula>TW1_Parcelas_Mensais__c * ((TW1_Taxa_de_Juros_Efetiva__c *((TW1_Taxa_de_Juros_Efetiva__c + 1)^( TW1_Qtd_Parcelas_Mensais__c +  TW1_Meses_Capitalizacao__c  -1)))/((( TW1_Taxa_de_Juros_Efetiva__c + 1 )^ TW1_Qtd_Parcelas_Mensais__c )- 1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Parcela Mensal com Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Parcela_Semestral_com_Juros__c</fullName>
        <formula>TW1_Parcelas_Semestrais_Capitalizadas__c * (( TW1_Taxa_de_Juros_Efetiva_Semestral__c  * ((1 + TW1_Taxa_de_Juros_Efetiva_Semestral__c) ^ (TW1_Qtd_Parcelas_Semestrais__c -1))) / ((1 + TW1_Taxa_de_Juros_Efetiva_Semestral__c) ^ TW1_Qtd_Parcelas_Semestrais__c -1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Parcela Semestral com Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Total_Pago__c</fullName>
        <label>Valor Total Pago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>